--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "npm-run-all": "^4.1.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "react-player": "^1.3.1",
+    "react-intersection-observer": "^3.0.3",
+    "react-inview-monitor": "^2.2.0",
+    "react-player": "^1.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
