--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.6.1",
     "node-sass": "^4.8.3",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
